--- a/index.html
+++ b/index.html
@@ -150,11 +150,10 @@
                   <div class="img-slide-item-title">
                     Groundbreaking Application of Degradable Photovoltaic Technology
                     </div>
-                    <video src="video/Mob-03-1.mp4" poster="video/Mob-03-1.jpg" muted controls></video>
-                  <!-- <img src="img/Mob-03-1@3x.jpg" alt=""> -->
-                  <div class="img-slide-item-text">
-                    Powered by industry-leading OPV-PSC layered photovoltaic technology, ECO NANO SOLAR combines sustainable organic photovoltaic materials with high-performance perovskite solar cells. This innovative design achieves an impressive 26% light-to-electricity conversion efficiency and is over 80% biodegradable. When it’s time to dispose of the device, the organic photovoltaic base naturally decomposes, greatly enhancing its environmental sustainability.
-                  </div>
+                    <div class="img-slide-item-text">
+                      Powered by industry-leading OPV-PSC layered photovoltaic technology, ECO NANO SOLAR combines sustainable organic photovoltaic materials with high-performance perovskite solar cells. This innovative design achieves an impressive 26% light-to-electricity conversion efficiency and is over 80% biodegradable. When it’s time to dispose of the device, the organic photovoltaic base naturally decomposes, greatly enhancing its environmental sustainability.
+                    </div>
+                    <video src="video/web-03-1.mp4" poster="video/web-03-1.jpg" muted controls></video>
                 </div>
               </div>
               <div class="img-slide-item flex-col img-slide-item-02" style="z-index: 4;top: 117px;left: -1px;transform: scale(.97);">
@@ -162,10 +161,10 @@
                   <div class="img-slide-item-title">
                     Revolutionary Recyclable Solar Energy Storage System
                     </div>
-                    <video src="video/Mob-03-2.mp4" poster="video/Mob-03-2.jpg" muted controls></video>
-                  <div class="img-slide-item-text">
-                    Featuring a state-of-the-art integrated solar panel and battery system, ECO NANO SOLAR is engineered with fully separable and 100% recyclable power units. The solar cells and battery components can be independently dismantled for specialized recycling, significantly reducing the risk of heavy metal pollution. This innovative design promotes a cleaner, safer recycling process, laying the groundwork for a sustainable tomorrow. 
-                  </div>
+                    <div class="img-slide-item-text">
+                      Featuring a state-of-the-art integrated solar panel and battery system, ECO NANO SOLAR is engineered with fully separable and 100% recyclable power units. The solar cells and battery components can be independently dismantled for specialized recycling, significantly reducing the risk of heavy metal pollution. This innovative design promotes a cleaner, safer recycling process, laying the groundwork for a sustainable tomorrow. 
+                    </div>
+                    <video src="video/web-03-2.mp4" poster="video/web-03-2.jpg" muted controls></video>
                 </div>
               </div>
               <div class="img-slide-item flex-col img-slide-item-03" style="z-index: 3;top: 136px;left: -2px;transform: scale(.93);">
@@ -173,11 +172,10 @@
                   <div class="img-slide-item-title">
                     Next-Generation Separable Modular Design
                     </div>
-                  <!-- <img src="img/Mob-03-3@3x.jpg" alt=""> -->
-                  <video src="video/Mob-03-3.mp4" poster="video/Mob-03-3.jpg" muted controls></video>
                   <div class="img-slide-item-text">
                     ECO NANO SOLAR introduces a breakthrough in structural innovation, replacing the traditional integrated design with a modular structure. Each component—solar power unit, display screen, atomization core, and outer casing—is an independent, interchangeable module that can be freely replaced. This modularity enables extended product life, supports long-term use, reduces waste from disposal, and contributes to a more sustainable lifecycle. 
                   </div>
+                  <video src="video/web-03-3.mp4" poster="video/web-03-3.jpg" muted controls></video>
                 </div>
               </div>
               <div class="img-slide-item flex-col img-slide-item-04" style="z-index: 2;top: 151px;left: -2px;transform: scale(.9);">
@@ -185,11 +183,10 @@
                   <div class="img-slide-item-title">
                     Meticulously Crafted from Eco-Conscious Materials
                     </div>
-                  <!-- <img src="img/Mob-03-4@3x.jpg" alt=""> -->
-                  <video src="video/Mob-03-4.mp4" poster="video/Mob-03-4.jpg" muted controls></video>
-                  <div class="img-slide-item-text">
-                    Constructed with 70% eco-friendly materials, including high-purity aluminum alloy, recycled glass, organic cotton, and PCTG, the ECO NANO SOLAR sets a new standard in environmental responsibility. Its manufacturing process conserves up to 60% more energy than traditional e-cigarette production while reducing CO₂ emissions by approximately 40%. This pioneering design not only promotes solar energy but also makes a meaningful impact in reducing the industry's environmental footprint.
-                  </div>
+                    <div class="img-slide-item-text">
+                      Constructed with 70% eco-friendly materials, including high-purity aluminum alloy, recycled glass, organic cotton, and PCTG, the ECO NANO SOLAR sets a new standard in environmental responsibility. Its manufacturing process conserves up to 60% more energy than traditional e-cigarette production while reducing CO₂ emissions by approximately 40%. This pioneering design not only promotes solar energy but also makes a meaningful impact in reducing the industry's environmental footprint.
+                    </div>
+                    <video src="video/web-03-4.mp4" poster="video/web-03-4.jpg" muted controls></video>
                 </div>
               </div>
               <div class="img-slide-item flex-col img-slide-item-05" style="z-index: 1; top: 165px;left: -2px;transform: scale(.87);">
@@ -199,21 +196,21 @@
                         Compared to conventional e-cigarettes, every 100 ECO NANO SOLAR devices result in:
                       </div>
                       <div class="img-slide-item-box-5-text-wrapper">
-                        <img width="56" src="img/03-5-icon 2@2x.svg" alt="">
+                        <img width="56" src="image/03-5-icon 1@2x.svg" alt="">
                         <div class="flex-col">
                           <span>60%</span>
                           <span>Reduction in Energy Consumption</span>
                         </div>
                       </div>
                       <div class="img-slide-item-box-5-text-wrapper">
-                        <img width="56" src="img/03-5-icon 1@2x.svg" alt="">
+                        <img width="56" src="image/03-5-icon 1@2x.svg" alt="">
                         <div class="flex-col">
                           <span>1000kg</span>
                           <span>CO₂ Reduction</span>
                         </div>
                       </div>
                       <div class="img-slide-item-box-5-text-wrapper">
-                        <img width="56" src="img/03-5-icon 3@2x.svg" alt="">
+                        <img width="56" src="image/03-5-icon 1@2x.svg" alt="">
                         <div class="flex-col">
                           <span>75%%</span>
                           <span>Product Recycling Rate</span>
