feat: 相册调整，滚动调整

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <section class="img-slide-section" >
           <div class="img-slide-layout">
             <div class="img-slide-wrapper">
-              <div class="img-slide-item flex-col img-slide-item-01" style="z-index: 5;top: 100px;left: 0px;">
+              <div class="img-slide-item flex-col img-slide-item-01" style="z-index: 5;top: 0;left: 0px;">
                 <div class="img-slide-item-box">
                   <div class="img-slide-item-title">
                     Groundbreaking Application of Degradable Photovoltaic Technology
@@ -156,7 +156,7 @@
                     <video src="video/web-03-1.mp4" poster="video/web-03-1.jpg" muted controls></video>
                 </div>
               </div>
-              <div class="img-slide-item flex-col img-slide-item-02" style="z-index: 4;top: 117px;left: -1px;transform: scale(.97);">
+              <div class="img-slide-item flex-col img-slide-item-02" style="z-index: 4;top: 17px;left: -1px;transform: scale(.97);">
                 <div class="img-slide-item-box">
                   <div class="img-slide-item-title">
                     Revolutionary Recyclable Solar Energy Storage System
@@ -167,7 +167,7 @@
                     <video src="video/web-03-2.mp4" poster="video/web-03-2.jpg" muted controls></video>
                 </div>
               </div>
-              <div class="img-slide-item flex-col img-slide-item-03" style="z-index: 3;top: 136px;left: -2px;transform: scale(.93);">
+              <div class="img-slide-item flex-col img-slide-item-03" style="z-index: 3;top: 36px;left: -2px;transform: scale(.93);">
                 <div class="img-slide-item-box">
                   <div class="img-slide-item-title">
                     Next-Generation Separable Modular Design
@@ -178,7 +178,7 @@
                   <video src="video/web-03-3.mp4" poster="video/web-03-3.jpg" muted controls></video>
                 </div>
               </div>
-              <div class="img-slide-item flex-col img-slide-item-04" style="z-index: 2;top: 151px;left: -2px;transform: scale(.9);">
+              <div class="img-slide-item flex-col img-slide-item-04" style="z-index: 2;top: 51px;left: -2px;transform: scale(.9);">
                 <div class="img-slide-item-box">
                   <div class="img-slide-item-title">
                     Meticulously Crafted from Eco-Conscious Materials
@@ -189,7 +189,7 @@
                     <video src="video/web-03-4.mp4" poster="video/web-03-4.jpg" muted controls></video>
                 </div>
               </div>
-              <div class="img-slide-item flex-col img-slide-item-05" style="z-index: 1; top: 165px;left: -2px;transform: scale(.87);">
+              <div class="img-slide-item flex-col img-slide-item-05" style="z-index: 1; top: 65px;left: -2px;transform: scale(1.1);">
                 <div class="img-slide-item-box img-slide-item-box-5">
                     <div class="">
                       <div class="img-slide-item-box-5-title">
