feat: 样式调整，签名功能对接

--- a/index.html
+++ b/index.html
@@ -235,7 +235,6 @@
                 >VAPORESSO Driving Energy Sustainability through The Power of Innovation
                 </span
               >
-              <div>Pioneering eco-friendly product innovation, VAPORESSO is leading the Industry into a new era of sustainable energy solutions.</div>
             </div>
           </div>
         </section>
@@ -247,7 +246,8 @@
         </div>
       </div>
       <div class="group_97 flex-col">
-        <span class="paragraph_31 fontRepair fontBold">Inspiring Waves of<br />Sustainable Action</span>
+        <!-- <span class="paragraph_31 fontRepair fontBold">Inspiring Waves of<br />Sustainable Action</span> -->
+        <span class="paragraph_31 fontRepair fontBold">ACTION POWER <br />FOR SOCIETY</span>
         <div class="section_22 flex-col"></div>
         <div class="text-wrapper_85 flex-row justify-between">
           <span class="text_315">Pure Power Action</span>
@@ -408,7 +408,7 @@
                 <img
                   class="image_55"
                   referrerpolicy="no-referrer"
-                  src="https://lanhu-oss.lanhuapp.com/SketchPngddfd8256dc72eb9aa9d737e54b394c7618efe208ab747a5e2182b3a171e339cb"
+                  src="image/06-1-1@2x.svg"
                 />
                 <div class="text-group_73 flex-col">
                   <span class="text_318">Pure Power Level</span>
@@ -418,14 +418,16 @@
                 <div class="box_84 flex-row" onclick="openModal('.drone1')">
                   <div class="image-text_37 flex-row justify-between">
                     <span class="text-group_74">Make an Impact</span>
-                    <span class="text-group_74 draw">Lucky Draw</span>
                     <img
                       class="label_9"
                       referrerpolicy="no-referrer"
-                      src="https://lanhu-oss.lanhuapp.com/SketchPngedec5daac18ad722531f7c2b4bb3cc5300f37291370775f01a1c6e1afb8e9e91"
+                      src="image/06-1-2@2x.svg"
                     />
                   </div>
                 </div>
+                <div class="drawReward state">
+                   <span class="draw">Lucky Draw</span>
+                 </div>
               </div>
               <div class="group_99 flex-col">
                 <div class="box_85 flex-col"></div>
@@ -443,7 +445,7 @@
                 <img
                   class="image_59"
                   referrerpolicy="no-referrer"
-                  src="https://lanhu-oss.lanhuapp.com/SketchPng7385b90be769e41982caf1d57acc5fb6a94abc39acd159e796e6c21959bd2bc2"
+                  src="image/06-2-1@2x.svg"
                 />
                 <span class="text_330 fontRepair fontBold">Pure Power Level</span>
                 <div class="text-wrapper_88 fontRepair">
@@ -472,7 +474,7 @@
                 <img
                   class="image_60"
                   referrerpolicy="no-referrer"
-                  src="https://lanhu-oss.lanhuapp.com/SketchPngab3cf23bd8f5432aa0754d9435c026ab886b07d96b296d0c48b5f74419a83e2c"
+                  src="image/06-3-1@2x.svg"
                 />
                 <span class="text_339 fontRepair fontBold">Pure Power Level</span>
                 <div class="text-wrapper_90 fontRepair">
@@ -524,7 +526,7 @@
                 <img
                   class="label_3"
                   referrerpolicy="no-referrer"
-                  src="https://lanhu-oss.lanhuapp.com/SketchPng628d0ae0d907d29e4d3a6a08874b2976a1770ce935aa64fe65fbd77a76189f87"
+                  src="image/07-1@2x.svg"
                 />
               </div>
             </div>
@@ -538,7 +540,8 @@
       </div>
       <div class="block_21 flex-col">
         <div class="text-group_81 flex-col justify-between">
-          <span class="paragraph_5">Paving the Path Towards <br />A Brighter Tomorrow</span>
+          <!-- <span class="paragraph_5">Paving the Path Towards <br />A Brighter Tomorrow</span> -->
+          <span class="paragraph_5">PAVING THE RATH <br> TOWARDS A BRIGHTHER <br /> TOMORROW</span>
           <span class="text_93"
             >VAPORESSO is proud to champion a more sustainable way of life. Join us by signing the Pure Living Proposal— a shared commitment to shaping a brighter, greener tomorrow. Let’s start making eco-conscious choices part of our everyday lives and inspiring others to follow. Together, making green living a part of everyday life and building a future where green is the new norm.
             </span
@@ -549,14 +552,14 @@
             <img
               class="image_61"
               referrerpolicy="no-referrer"
-              src="https://lanhu-oss.lanhuapp.com/SketchPnge2a3a7ba022efe3e14e5a610db16cecb8e1c08a6600d6060402ebc85adddc28a"
+              src="image/08-1@2x.svg"
             />
             <div class="block_62 flex-row justify-between">
               <span class="text_349">PURE P</span>
               <img
                 class="image_62"
                 referrerpolicy="no-referrer"
-                src="https://lanhu-oss.lanhuapp.com/SketchPng35740c7b8a86a832999c7565c4986c860793b1e6bdec4fdc0f9043e60501f888"
+                src="image/08-2@2x.svg"
               />
               <span class="text_350">WER FOR ALL</span>
             </div>
@@ -573,7 +576,7 @@
             <img
               class="image_64"
               referrerpolicy="no-referrer"
-              src="https://lanhu-oss.lanhuapp.com/SketchPng123ac618a427fc967d61fcf60a9ae9b673793084d4b0f338806be8c4dbfaefc4"
+              src="image/08-1@2x.svg"
             />
             <img
               class="image_65"
@@ -610,7 +613,7 @@
                 <img
                   class="thumbnail_6"
                   referrerpolicy="no-referrer"
-                  src="https://lanhu-oss.lanhuapp.com/SketchPnga6e63c20314b607c91ab7de7eff214da5221a9e77e70f99c572506f7adcca7cb"
+                  src="image/9-11.svg"
                 />
               </div>
               <div class="block_63 flex-col"></div>
@@ -636,91 +639,7 @@
               <span class="text_109">Confirm</span>
             </div>
           </div>
-          <div class="group_39 flex-col">
-            <div class="group_109 flex-row">
-              <span class="text_362">Darya Karpovich</span>
-              <div class="image-text_39 flex-row justify-between">
-                <div class="box_95 flex-col"></div>
-                <span class="text-group_82">Вероника Швед</span>
-              </div>
-              <div class="image-text_40 flex-row justify-between">
-                <div class="box_96 flex-col"></div>
-                <span class="text-group_83">Aleksandra Papina</span>
-              </div>
-              <span class="text_363">Bekkhan Borchashvili</span>
-            </div>
-            <div class="group_110 flex-row">
-              <span class="text_364">Darya Karpovich</span>
-              <div class="image-text_41 flex-row justify-between">
-                <div class="box_97 flex-col"></div>
-                <span class="text-group_84">Bekkhan Borchashvili</span>
-              </div>
-              <div class="image-text_42 flex-row justify-between">
-                <div class="section_30 flex-col"></div>
-                <span class="text-group_85">Кирилл Новиков</span>
-              </div>
-              <span class="text_365">Bekkhan Borchashvili</span>
-            </div>
-            <div class="group_111 flex-row justify-between">
-              <span class="text_366">Darya Karpovich</span>
-              <div class="image-text_43 flex-row justify-between">
-                <div class="section_31 flex-col"></div>
-                <span class="text-group_86">Darya Karpovich</span>
-              </div>
-              <div class="image-text_44 flex-row justify-between">
-                <div class="box_98 flex-col"></div>
-                <span class="text-group_87">Fedor Berestov</span>
-              </div>
-              <div class="image-text_45 flex-row justify-between">
-                <div class="group_112 flex-col"></div>
-                <span class="text-group_88">Marian Atanasov</span>
-              </div>
-            </div>
-            <div class="group_113 flex-row">
-              <span class="text_367">Greg Coulton</span>
-              <div class="image-text_46 flex-row justify-between">
-                <div class="group_114 flex-col"></div>
-                <span class="text-group_89">Viktoria Aldatova</span>
-              </div>
-              <div class="image-text_47 flex-row justify-between">
-                <div class="box_99 flex-col"></div>
-                <span class="text-group_90">Dejan &amp; Per</span>
-              </div>
-              <span class="text_368">Bekkhan Borchashvili</span>
-            </div>
-            <div class="group_115 flex-row justify-between">
-              <span class="text_369">Greg Coulton</span>
-              <div class="image-text_48 flex-row justify-between">
-                <div class="group_116 flex-col"></div>
-                <span class="text-group_91">Viktoria Aldatova</span>
-              </div>
-              <div class="image-text_49 flex-row justify-between">
-                <div class="block_72 flex-col"></div>
-                <span class="text-group_92">Dejan &amp; Per</span>
-              </div>
-              <div class="image-text_50 flex-row justify-between">
-                <div class="section_32 flex-col"></div>
-                <span class="text-group_93">Bekkhan Borchashvili</span>
-              </div>
-            </div>
-            <div class="group_117 flex-row justify-between">
-              <span class="text_370">Greg Coulton</span>
-              <div class="image-text_51 flex-row justify-between">
-                <div class="section_33 flex-col"></div>
-                <span class="text-group_94">Viktoria Aldatova</span>
-              </div>
-              <div class="image-text_52 flex-row justify-between">
-                <div class="box_100 flex-col"></div>
-                <span class="text-group_95">Dejan &amp; Per</span>
-              </div>
-              <div class="image-text_53 flex-row justify-between">
-                <div class="block_73 flex-col"></div>
-                <span class="text-group_96">Bekkhan Borchashvili</span>
-              </div>
-            </div>
-            <div class="group_118 flex-col"></div>
-            <div class="group_119 flex-col"></div>
-          </div>
+          <div class="group_39 flex-col" id="signature-container"></div>
         </div>
         <div class="text-wrapper_30 flex-col">
           <span class="text_119">PURE POWER <br> FOR ALL!</span>
