feat: 签名动画实现

--- a/index.html
+++ b/index.html
@@ -639,7 +639,14 @@
               <span class="text_109">Confirm</span>
             </div>
           </div>
-          <div class="group_39 flex-col" id="signature-container"></div>
+          <div class="group_39 flex-col" id="signature-container">
+            <div class="group_39-content">
+              <!-- 这里是滚动的内容 -->
+              <div class="content">
+                <!-- 原始内容 -->
+              </div>
+            </div>
+          </div>
         </div>
         <div class="text-wrapper_30 flex-col">
           <span class="text_119">PURE POWER <br> FOR ALL!</span>
