feat: 创建投票接口文件

--- a/index.html
+++ b/index.html
@@ -686,5 +686,6 @@
     <script src="js/bottom.js"></script>
     <script src="js/animate.js"></script>
     <script src="js/modal.js"></script>
+    <script src="js/vote.js"></script>
   </body>
 </html>
