feat: 文件结构修改

--- a/desktop.html
+++ b/desktop.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./common.css" />
-    <link rel="stylesheet" type="text/css" href="./index.css" />
+    <link rel="stylesheet" type="text/css" href="css/common.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet/less" type="text/css" href="css/bottom.less" />
     <link rel="stylesheet/less" type="text/css" href="css/modal.less" />
     <script src="https://cdn.jsdelivr.net/npm/less@4.1.1"></script>
@@ -682,7 +682,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="api/index.js"></script>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/bottom.js"></script>
     <script src="js/animate.js"></script>
     <script src="js/modal.js"></script>
