feat: 添加自动滚入效果

--- a/desktop.html
+++ b/desktop.html
@@ -52,7 +52,7 @@
         >
         <div class="text-wrapper_5 flex-row">
           <span class="text_13" onclick="scrollToSection('text_13')"
-            >Leading the Way in Eco-Innovation</span
+            >Leading the Way <br> in Eco-Innovation</span
           >
           <span class="text_14" onclick="scrollToSection('text_14')"
             >Inspiring Waves of Sustainable Action</span
@@ -737,6 +737,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollToPlugin.min.js"></script>
     <script src="api/index.js"></script>
     <script src="js/index.js"></script>
     <script src="js/bottom.js"></script>
